--- a/Samples/Samples/Samples/Views/MainPage.xaml
+++ b/Samples/Samples/Samples/Views/MainPage.xaml
@@ -8,13 +8,18 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         
         <Label Text="Xamarin Forms Community Toolkit"
                Grid.Row="0" />
-
+        
+        <Button Text="Animations"
+                Clicked="OnAnimationsButtonClicked"
+                Grid.Row="1" />
+        
         <Button Text="Effects"
                 Clicked="OnEffectsButtonClicked"
-                Grid.Row="1" />
+                Grid.Row="2" />
     </Grid>
 </ContentPage>
