--- a/Samples/Samples/Samples/Views/EffectsEntryPage.xaml
+++ b/Samples/Samples/Samples/Views/EffectsEntryPage.xaml
@@ -7,13 +7,17 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <Button Text="CapitalizeKeyboard effect"
+        <Button Text="Capitalize keyboard effect"
                 Clicked="OnCapitalizeKeyboardButtonClicked"
                 Grid.Row="0" />
         <Button Text="Clear effect"
                 Clicked="OnClearButtonClicked"
                 Grid.Row="1" />
+        <Button Text="Disable auto correct effect"
+                Clicked="OnDisableAutoCorrectButtonClicked"
+                Grid.Row="2" />
     </Grid>
 </ContentPage>
