--- a/Samples/Samples/Samples/Views/EffectsEntryPage.xaml
+++ b/Samples/Samples/Samples/Views/EffectsEntryPage.xaml
@@ -9,6 +9,9 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
         <Button Text="Capitalize keyboard effect"
@@ -23,5 +26,14 @@
         <Button Text="Italic placeholder effect"
                 Clicked="OnItalicPlaceholderButtonClicked"
                 Grid.Row="3" />
+        <Button Text="Remove border effect"
+                Clicked="OnRemoveBorderButtonClicked"
+                Grid.Row="4" />
+        <Button Text="Remove line effect"
+                Clicked="OnRemoveLineButtonClicked"
+                Grid.Row="5" />
+        <Button Text="Select all text effect"
+                Clicked="OnSelectAllTextButtonClicked"
+                Grid.Row="6" />
     </Grid>
 </ContentPage>
