--- a/Samples/Samples/Samples/Views/EffectsPage.xaml
+++ b/Samples/Samples/Samples/Views/EffectsPage.xaml
@@ -8,6 +8,7 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
         <Button Text="Label effects"
@@ -21,5 +22,9 @@
         <Button Text="Switch effects"
                 Clicked="OnSwitchButtonClicked"
                 Grid.Row="2" />
+
+        <Button Text="View effects"
+                Clicked="OnViewButtonClicked"
+                Grid.Row="3" />
     </Grid>
 </ContentPage>
