--- a/Samples/Samples/Samples/Views/AnimationsPage.xaml
+++ b/Samples/Samples/Samples/Views/AnimationsPage.xaml
@@ -68,6 +68,14 @@
                 Target="{x:Reference JumpBox}"
                 Duration="1500"/>
 
+            <Color x:Key="ToColor">Red</Color>
+
+            <animation:ColorAnimation
+                x:Key="ColorAnimation"
+                Target="{x:Reference ColorBox}"
+                ToColor="{StaticResource ToColor}"
+                Duration="1500"/>
+            
             <animation:StoryBoard
                 x:Key="StoryBoard"
                 Target="{x:Reference StoryBoardBox}">
@@ -353,6 +361,34 @@
                         <EventTrigger Event="Clicked">
                             <animation:BeginAnimation
                                 Animation="{StaticResource JumpAnimation}" />
+                        </EventTrigger>
+                    </Button.Triggers>
+                </Button>
+            </Grid>
+        </ContentPage>
+        <ContentPage Title="Color">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <Grid
+                    Grid.Row="0"
+                    x:Name="ColorBox"
+                    HorizontalOptions="Center"
+                    VerticalOptions="Center"
+                    HeightRequest="120"
+                    WidthRequest="120"
+                    BackgroundColor="Green" />
+                <Button
+                    Grid.Row="1"
+                    HorizontalOptions="Center"
+                    VerticalOptions="End"
+                    Text="Color">
+                    <Button.Triggers>
+                        <EventTrigger Event="Clicked">
+                            <animation:BeginAnimation
+                                Animation="{StaticResource ColorAnimation}" />
                         </EventTrigger>
                     </Button.Triggers>
                 </Button>
