--- a/Samples/Samples/Samples/Views/EffectsViewPage.xaml
+++ b/Samples/Samples/Samples/Views/EffectsViewPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="FormsCommunityToolkit.Samples.Views.EffectsViewPage"
+             x:Class="XamarinCommunityToolkit.Samples.Views.EffectsViewPage"
              Title="View effects">
     <Grid HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
         <Grid.RowDefinitions>
