--- a/XamarinCommunityToolkitSample/Pages/WelcomePage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/WelcomePage.xaml
@@ -2,7 +2,7 @@
 <ContentPage
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    x:Class="XamarinCommunityToolkitSample.Views.WelcomePage"
+    x:Class="XamarinCommunityToolkitSample.Pages.WelcomePage"
     xmlns:vm="clr-namespace:XamarinCommunityToolkitSample.ViewModels"
     xmlns:extensions="clr-namespace:XamarinCommunityToolkit.Extensions;assembly=XamarinCommunityToolkit"
     x:Name="Page">
