--- a/XamarinCommunityToolkitSample/Pages/Views/ViewsGalleryPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Views/ViewsGalleryPage.xaml
@@ -3,43 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:vm="clr-namespace:XamarinCommunityToolkitSample.ViewModels.Views"
              x:Class="XamarinCommunityToolkitSample.Pages.Views.ViewsGalleryPage"
-             x:Name="Page">
-
-    <ContentPage.Resources>
-        <Style TargetType="Label">
-            <Setter Property="FontSize" Value="Large" />
-        </Style>
-    </ContentPage.Resources>
+             ControlTemplate="{StaticResource GalleryPageTemplate}">
 
     <ContentPage.BindingContext>
         <vm:ViewsGalleryViewModel />
     </ContentPage.BindingContext>
 
-    <ScrollView Padding="{StaticResource ContentPadding}"
-                VerticalOptions="FillAndExpand">
-        <StackLayout Spacing="10"
-                        BindableLayout.ItemsSource="{Binding Items}">
-            <BindableLayout.ItemTemplate>
-                <DataTemplate>
-                    <AbsoluteLayout HeightRequest="60">
-                        <StackLayout Orientation="Horizontal"
-                                        AbsoluteLayout.LayoutBounds="0,0,1,1"
-                                        AbsoluteLayout.LayoutFlags="All">
-                            <Label Text="{Binding Title}" />
-                            <Label Text=">"
-                                    HorizontalOptions="EndAndExpand"
-                                    TextColor="{StaticResource PrimaryColor}"/>
-                        </StackLayout>
-                        <BoxView Color="{StaticResource NormalLabelTextColor}"
-                                    AbsoluteLayout.LayoutBounds="0,1,1,1"
-                                    AbsoluteLayout.LayoutFlags="PositionProportional,WidthProportional"/>
-                        <AbsoluteLayout.GestureRecognizers>
-                            <TapGestureRecognizer Command="{Binding NavigateCommand, Source={x:Reference Page}}"
-                                                    CommandParameter="{Binding Id}" />
-                        </AbsoluteLayout.GestureRecognizers>
-                    </AbsoluteLayout>
-                </DataTemplate>
-            </BindableLayout.ItemTemplate>
-        </StackLayout>
-    </ScrollView>
 </ContentPage>
