--- a/XamarinCommunityToolkitSample/Pages/WelcomePage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/WelcomePage.xaml
@@ -18,7 +18,7 @@
     </NavigationPage.TitleView>
 
     <StackLayout>
-        <Image Source="{extensions:ImageResource xamarin_monkey.png}" HeightRequest="250" />
+        <Image Source="{extensions:ImageResource Id={StaticResource MonkeyResourceName}}" HeightRequest="250" />
         <ScrollView Padding="{StaticResource ContentPadding}"
                     VerticalOptions="FillAndExpand">
             <StackLayout Spacing="40">
