--- a/XamarinCommunityToolkitSample/Pages/AboutPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/AboutPage.xaml
@@ -14,7 +14,7 @@
 
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Thank you XamarinCommunityToolkit contributers"
+            <Label Text="Thank you XamarinCommunityToolkit contributors"
                    Margin="0,10,0,10"
                    FontSize="Large" />
             <CollectionView  x:Name="ContributorsCollectionView"
