renamed command in the sample files

--- a/XamarinCommunityToolkitSample/Pages/Behaviors/EventToCommandBehaviorPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Behaviors/EventToCommandBehaviorPage.xaml
@@ -19,7 +19,7 @@
                 <Button.Behaviors>
                     <behaviors:EventToCommandBehavior
                         EventName="Clicked"
-                        Command="{Binding Command}" />
+                        Command="{Binding IncrementCommand}" />
                 </Button.Behaviors>
             </Button>
         </StackLayout>
