--- a/XamarinCommunityToolkitSample/Pages/Behaviors/EmailValidationBehaviorPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Behaviors/EmailValidationBehaviorPage.xaml
@@ -16,7 +16,7 @@
         <Label Text="Text color will change accordingly to the style that is configured when a invalid value (email address) is entered" />
         <Entry Placeholder="Email">
             <Entry.Behaviors>
-                <behaviors:EmailValidationBehavior InvalidStyle="{StaticResource InvalidEntryStyle}"/>
+                <behaviors:EmailValidationBehavior DecorationFlags="Trim" InvalidStyle="{StaticResource InvalidEntryStyle}"/>
             </Entry.Behaviors>
         </Entry>
     </StackLayout>
